[package]
name = "rohanasanpm"
version = "0.1.1"
edition = "2021"
authors = ["Rohan Vashisht"]
description = "A project maker for Rohanasan: An extremely fast and easy backend framework for rust."
readme = "README.md"
categories = ["web-programming", "template-engine", "compilers", "config", "development-tools"]
publish = true
license = "GPL3"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
